Fixing coach descripription overflow

--- a/alchemycoaching.client/src/app/our-coaches/our-coaches.component.scss
+++ b/alchemycoaching.client/src/app/our-coaches/our-coaches.component.scss
@@ -96,6 +96,7 @@ body {
 @media (width < 550px){
     .right-content{
         max-height: 100%;
+        min-width: 300px;
     }
 }
 
